envoy.yaml
#####################################################################################
# Product: gRPC Envoy Proxy                                                         #
# Copyright (C) 2012-2020 E.R.P. Consultores y Asociados, C.A.                      #
# Contributor(s): Edwin Betancourt EdwinBetanc0urt@outlook.com                      #
# This program is free software: you can redistribute it and/or modify              #
# it under the terms of the GNU General Public License as published by              #
# the Free Software Foundation, either version 3 of the License, or                 #
# (at your option) any later version.                                               #
# This program is distributed in the hope that it will be useful,                   #
# but WITHOUT ANY WARRANTY; without even the implied warranty of                    #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the                     #
# GNU General Public License for more details.                                      #
# You should have received a copy of the GNU General Public License                 #
# along with this program.  If not, see <https://www.gnu.org/licenses/>.            #
#####################################################################################

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: {
      address: 0.0.0.0,
      port_value: 9901
    }


static_resources:
  listeners:
  - name: local_listener
    address:
      socket_address: {
        address: 0.0.0.0,
        # port of this proxy route
        port_value: 8989
      }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route_access
            virtual_hosts:
            - name: local_access_service
              domains: ["*"]
              routes:
              - match: {
                  # entry path for requests that will go to the access server
                  prefix: "/access/"
                  # prefix: "/access"
                }
                route: {
                  # switches the route prefix to this value
                  prefix_rewrite: "/",
                  cluster: access_cluster,
                  max_grpc_timeout: 0s
                }
              - match: {
                  # entry path for requests that will go to the dictionary server
                  prefix: "/dictionary/"
                }
                route: {
                  # switches the route prefix to this value
                  prefix_rewrite: "/",
                  cluster: dictionary_cluster,
                  max_grpc_timeout: 0s
                }
              - match: {
                  # entry path for requests that will go to the businessdata server
                  prefix: "/businessdata/"
                }
                route: {
                  # switches the route prefix to this value
                  prefix_rewrite: "/",
                  cluster: business_data_cluster,
                  max_grpc_timeout: 0s
                }
              - match: {
                  # entry path for requests that will go to the enrollment server
                  prefix: "/enrollment/"
                }
                route: {
                  # switches the route prefix to this value
                  prefix_rewrite: "/",
                  cluster: enrollment_cluster,
                  max_grpc_timeout: 0s
                }
              - match: {
                  # entry path for requests that will go to the pos server
                  prefix: "/pos/"
                }
                route: {
                  # switches the route prefix to this value
                  prefix_rewrite: "/",
                  cluster: pos_cluster,
                  max_grpc_timeout: 0s
                }
              - match: {
                  # entry path for requests that will go to the webstore server
                  prefix: "/webstore/"
                }
                route: {
                  # switches the route prefix to this value
                  prefix_rewrite: "/",
                  cluster: webstore_cluster,
                  max_grpc_timeout: 0s
                }
              cors:
                allow_origin_string_match:
                  - safe_regex:
                      google_re2: {}
                      regex: \*
                # This directive holds the list of HTTP request methods. If the
                # requests are more than one then the request are separated by commas.
                # DELETE, GET, OPTIONS, PATCH, POST, PUT
                allow_methods: OPTIONS, POST
                # is a response-type header that is used to indicate the HTTP headers.
                allow_headers: authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                # It specifies how many maximum seconds can the result be cached. Note: If -1 is present then caching is disabled.
                max_age: "1728000"
                # Is a response header that is used to expose the headers that have been mentioned in it.
                expose_headers: custom-header-1,grpc-status,grpc-message,x-envoy-upstream-service-time
          http_filters:
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.router


  clusters:
  - name: access_cluster
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: access_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # replace the 'localhost' address with your access host address
                address: localhost
                # it is the default port, unless the server port is changed it is recommended not to change
                port_value: 50050

  - name: dictionary_cluster
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: dictionary_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # replace the 'localhost' address with your dictionary host address
                address: localhost
                # it is the default port, unless the server port is changed it is recommended not to change
                port_value: 50051

  - name: business_data_cluster
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: business_data_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # replace the 'localhost' address with your business data host address
                address: localhost
                # it is the default port, unless the server port is changed it is recommended not to change
                port_value: 50052

  - name: enrollment_cluster
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: enrollment_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # replace the 'localhost' address with your enrollment host address
                address: localhost
                # it is the default port, unless the server port is changed it is recommended not to change
                port_value: 50053

  - name: pos_cluster
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: pos_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # replace the 'localhost' address with your pos host address
                address: localhost
                # it is the default port, unless the server port is changed it is recommended not to change
                port_value: 50054

  - name: webstore_cluster
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: webstore_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # replace the 'localhost' address with your webstore host address
                address: localhost
                # it is the default port, unless the server port is changed it is recommended not to change
                port_value: 50055
